5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3999/executions/1635_2711.log
== TEST (2019-04-08 13:46:56) 
-- CODE:
x=float(input("Valor disponivel:"))
y=int(input("quantidade de tickets:"))
z=float(input("valor dos tickets:"))
w=int(input("quantidade de passses:"))
q=float(input("valor dos passes:"))
if((y*z)+(w*q)>x):
	print(insuficiente)
else:
	print(suficiente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(suficiente)
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:47:32) 
-- CODE:
x=float(input("Valor disponivel:"))
y=int(input("quantidade de tickets:"))
z=float(input("valor dos tickets:"))
w=int(input("quantidade de passses:"))
q=float(input("valor dos passes:"))
if((y*z)+(w*q)>x):
	print(insuficiente)
else:
	print(suficiente)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(suficiente)
NameError: name 'suficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:48:15) 
-- CODE:
x=float(input("Valor disponivel:"))
y=int(input("quantidade de tickets:"))
z=float(input("valor dos tickets:"))
w=int(input("quantidade de passses:"))
q=float(input("valor dos passes:"))
if((y*z)+(w*q)>x):
	print("insuficiente")
else:
	print("suficiente")
-- OUTPUT:
suficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:48:28) 
-- CODE:
x=float(input("Valor disponivel:"))
y=int(input("quantidade de tickets:"))
z=float(input("valor dos tickets:"))
w=int(input("quantidade de passses:"))
q=float(input("valor dos passes:"))
if((y*z)+(w*q)>x):
	print("insuficiente")
else:
	print("suficiente")
-- EXECUTION TIME:
0.15222
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
suficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
insuficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:49:01) 
-- CODE:
x=float(input("Valor disponivel:"))
y=int(input("quantidade de tickets:"))
z=float(input("valor dos tickets:"))
w=int(input("quantidade de passses:"))
q=float(input("valor dos passes:"))
if((y*z)+(w*q)>x):
	print("INSUFICIENTE")
else:
	print("SUFICIENTE")
-- EXECUTION TIME:
0.12118
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
